[gd_scene load_steps=5 format=3 uid="uid://hlvo17c3v540"]

[ext_resource type="Script" path="res://ant.gd" id="1_6ruhu"]
[ext_resource type="Texture2D" uid="uid://cr1yk0r0vecrb" path="res://ant.png" id="2_iie74"]
[ext_resource type="Texture2D" uid="uid://b3n1h1aflurbx" path="res://ant_food.png" id="3_5u7ww"]

[sub_resource type="LabelSettings" id="LabelSettings_tkda4"]
line_spacing = 0.0
font_size = 8

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6ruhu")

[node name="EndPosition" type="Polygon2D" parent="."]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -12.0
offset_top = -16.0
offset_right = 12.0
offset_bottom = -1.0
text = "STATE"
label_settings = SubResource("LabelSettings_tkda4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AntSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_iie74")

[node name="FoodSprite" type="Sprite2D" parent="AntSprite"]
texture = ExtResource("3_5u7ww")

[node name="PheromonArea" type="Area2D" parent="."]

[node name="PheromonHitbox" type="CollisionPolygon2D" parent="PheromonArea"]
polygon = PackedVector2Array(4, 0, 24, -22, 24, 22)
